cmake_minimum_required(VERSION 2.8.12)
project(pfdtool C)

set(AES_IMPL_POLARSSL "polarssl")
set(SHA_IMPL_POLARSSL "polarssl")

set(AES_IMPL_MBEDTLS "mbedtls")
set(SHA_IMPL_MBEDTLS "mbedtls")

set(USE_AES_IMPL ${AES_IMPL_POLARSSL} CACHE STRING "AES implementation to use")
set(USE_SHA_IMPL ${SHA_IMPL_POLARSSL} CACHE STRING "SHA implementation to use")

if (USE_AES_IMPL STREQUAL AES_IMPL_POLARSSL OR USE_SHA_IMPL STREQUAL SHA_IMPL_POLARSSL)
    set(USING_POLARSSL 1)
else()
    set(USING_POLARSSL 0)
endif()

if (USE_AES_IMPL STREQUAL AES_IMPL_MBEDTLS OR USE_SHA_IMPL STREQUAL SHA_IMPL_MBEDTLS)
    set(USING_MBEDTLS 1)
else()
    set(USING_MBEDTLS 0)
endif()

message(STATUS "Use AES implementation: ${USE_AES_IMPL}")
message(STATUS "Use SHA implementation: ${USE_SHA_IMPL}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(libpfdtool)
add_subdirectory(pfdtool)
